AutoFormFill: nova kolona Delay DKlik -> DvoKlik, ukinuta Pauza zbog kontrole delay-a kroz novu kolonu Rešen bag sa ponovnim pokretanjem Pustanja - moralo je 2x da se klikne na Start JISP: PPP kraj - prevodnica vs uverenje

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -15,7 +15,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <PublishUrl>publish\</PublishUrl>
+    <PublishUrl>nas_jisp\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
